# family-finance

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  README_EMULATOR.md  README_INSTALLER.md  run_emulator.sh
.github/workflows/: android.yml  ios.yml
assets/: tailwind.css
src/: app.rs  error.rs  main.rs
src/db/: migrations.rs  mod.rs
src/models/: category.rs  family.rs  holding.rs  member.rs  mod.rs  transaction.rs  wallet.rs
src/repository/: category_repo.rs  family_repo.rs  holding_repo.rs  member_repo.rs  mod.rs  settings_repo.rs  transaction_repo.rs  wallet_repo.rs
src/services/: holding_service.rs  member_service.rs  mod.rs  report_service.rs  transaction_service.rs
src/views/: dashboard.rs  mod.rs
src/views/members/: detail.rs  family_detail.rs  family_form.rs  form.rs  list.rs  mod.rs
src/views/pin/: mod.rs  verify.rs
src/views/reports/: expense.rs  investment.rs  mod.rs  timeline.rs
src/views/settings/: backup.rs  categories.rs  mod.rs
src/views/transactions/: form.rs  list.rs  mod.rs
src/views/wallets/: detail.rs  form.rs  holdings.rs  list.rs  mod.rs
