[package]
name = "family-finance"
version = "0.1.0"
authors = ["Nam Dinh <namdwb@gmail.com>"]
edition = "2021"

[[bin]]
name = "family-finance"
path = "src/main.rs"
 
[dependencies]
dioxus        = { version = "0.7", features = ["mobile"] }
rusqlite      = { version = "0.31", features = ["bundled"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
rust_decimal  = { version = "1", features = ["serde-float"] }
once_cell     = "1"
thiserror     = "1"
time          = "=0.3.36"
bcrypt        = "0.15"
 
[profile.release]
opt-level = 3
lto       = true
strip     = true

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
